--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
           product-id: 210230
           schedule-id: 100002
           seat-id: 1_0
-          slack-incoming-webhook-url: https://hooks.slack.com/services/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
-          message: '<@U12345678> 달려달려~'
+          slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          message: '<@U12345678> Tickets are available!'
